--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,5 +1,39 @@
-<h1><span style="color: blueviolet">{{ inventory }}</span></h1>
+{% extends 'base.html' %}
 
-<h2>Name: <span style="color: lightcoral">{{ name }}</span></h2>
-<h2>NPM: <span style="color: lightsalmon">{{ npm }}</span></h2>
-<h2>Class: <span style="color: lightpink">{{ class }}</span></h2>
+{% block content %}
+    <h1><span style="color: blueviolet">{{ inventory }}</span></h1>
+
+    <h2>Name: <span style="color: lightcoral">{{ name }}</span></h2>
+    <h2>NPM: <span style="color: lightsalmon">{{ npm }}</span></h2>
+    <h2>Class: <span style="color: lightpink">{{ class }}</span></h2>
+
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Amount</th>
+            <th>Description</th>
+            <th>Category</th>
+            <th>Price</th>
+        </tr>
+    
+        {% comment %} Berikut cara memperlihatkan data produk di bawah baris ini {% endcomment %}
+    
+        {% for product in products %}
+            <tr>
+                <td>{{product.name}}</td>
+                <td>{{product.amount}}</td>
+                <td>{{product.description}}</td>
+                <td>{{product.category}}</td>
+                <td>{{product.price}}</td>
+            </tr>
+        {% endfor %}
+    </table>
+    
+    <br />
+    
+    <a href="{% url 'main:create_product' %}">
+        <button>
+            Add New Product
+        </button>
+    </a>
+{% endblock content %}
