--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="path/to/bootstrap.min.css"> <!-- Sertakan Bootstrap CSS -->
     <style>
         body {
-            background-color: #f4a29e; /* Warna latar belakang halaman (pink coral pastel) */
+            background-color: #f7b3ae; /* Warna latar belakang halaman (pink coral pastel) */
             color: #b19cd9; /* Warna teks (ungu pastel) */
             font-family: 'Comic Sans MS', cursive, sans-serif; /* Ganti dengan font pilihan Anda */
         }
