--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -182,6 +182,8 @@
             </tr>
         </table>
 
+        <h5>Sesi terakhir login: {{ last_login }}</h5>
+
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
@@ -226,6 +228,7 @@
                 </div>
             {% endfor %}
         </div>
+        
     </div>
 
     <script src="path/to/bootstrap.bundle.min.js"></script> <!-- Sertakan Bootstrap JS (optional) -->
