--- a/templates/base.html
+++ b/templates/base.html
@@ -18,5 +18,8 @@
     <body>
         {% block content %}
         {% endblock content %}
+
+        {% block script %}
+        {% endblock script %}
     </body>
 </html>
